--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -113,6 +113,8 @@ header {
   font-size: 1.5em;
   border: 2px solid lightgray;
   justify-content: space-around;
+  /* position: fixed;
+  width: 100%; */
   /* justify-content: center; */
 }
 
