--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -18,7 +18,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2em;
-  /* width: 20%; */
   height: 0;
   width: 100%;
   overflow: hidden;
@@ -71,6 +70,8 @@ body {
   margin: 2em;
   border-bottom: 1px solid #ccc; /* Optional: Add a border at the bottom of the item */
   position: relative;
+  text-decoration: none;
+  color: black;
 }
 
 .submenu-arrow {
@@ -88,6 +89,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
+  max-height: fit-content;
 }
 
 .hamburger-toggle {
@@ -133,8 +135,7 @@ nav {
 nav ul {
   list-style: none;
   display: flex;
-  gap: 5em;
-  align-items: center;
+  gap: 6vw  ;
   margin-left: 1.5em;
 }
 
@@ -204,7 +205,7 @@ main h2 {
 
 .catalog-guides div {
   flex-basis: 48%;
-  background-size: contain !important;
+  background-size: cover !important;
   background-position: center !important ;
 }
 
@@ -225,7 +226,6 @@ main h2 {
   background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(246, 246, 246, 0) 45%, rgba(246, 246, 246, 1) 90%), url(../media/relationships.jpg);
 
 }
-
 
 .catalog-items {
   position: relative;
@@ -258,7 +258,7 @@ main h2 {
 }
 
 .catalog-guides .sale-icon {
-  width: 25%;
+  width: 2.6em;
   height: auto;
   max-height: 100%;
   position: absolute;
@@ -300,13 +300,7 @@ main h2 {
   border-color: #464646;
   color: #fff;
 }
-footer {
-  background: gray;
-  color: #fff;
-  padding: 1em;
-  text-align: center;
-  margin-top: auto;
-}
+
 
 .carousel {
   position: relative;
@@ -316,7 +310,7 @@ footer {
 
 .carousel-container {
   display: flex;
-  width: 300%;
+  width: 200%;
   transition: transform 0.5s ease;
 }
 
@@ -384,6 +378,7 @@ footer {
 .article img {
   width: 100%;
   height: auto;
+  min-height: 18vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -458,38 +453,68 @@ footer {
 }
 
 footer {
+  color: #fff;
+  background: gray;
   text-align: center;
   padding: 20px;
-}
-
-.footer-rows {
   display: block;
-  margin-bottom: 2vh;
+  display: block;
 }
 
-.footer-rows h3 {
+footer a{
+  color: white;
+  text-decoration: none;
+}
+
+footer p:last-child{
+  color:rgb(190, 190, 190);
+}
+
+footer ul{
+  display: flex;
+  justify-content: center;
+  gap: 1vw;
+  flex-wrap: wrap;
+  margin-bottom: .5em;
+  color: red;
+  list-style: none;
+}
+footer h3 {
   margin-bottom: 1vh;
 }
 
-.footer-rows ul li {
-  display: inline;
+footer ul li {
+  display: flex;
+  flex-wrap: nowrap;
   margin-right: 1vh;
 }
-
 .email-contact {
-  margin-top: 1vh;
+  margin: .5em 0;
 }
 
+.email-contact p {
+  margin-bottom: .5em;
+}
 .email-contact form {
-  display: block;
-  margin-top: 1vh;
+
+  display: flex;
+  gap: .5em;
+  justify-content: center;
 }
 
 .email-contact input[type="email"] {
-  width: 100%;
-  margin-bottom: 1vh;
+  margin: 0;
+  font-size: 1em;
 }
 
 .email-contact input[type="submit"] {
-  margin-bottom: 1vh;
+  border-radius: 1em;
+  border: 1px solid grey;
+  font-weight: bold;
+  padding: 0 .4em;
+}
+
+.footer-info-links{
+  text-decoration: underline;
+  color: rgb(183, 183, 183);
 }
