--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -236,7 +236,7 @@ main h2 {
   bottom: 10%;
   left: 10%;
   margin: 0;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: #333;
 }
 
@@ -251,7 +251,6 @@ main h2 {
   color: #333;
 }
 
-/* Why without catalog items its more specific and doesnt get prio */
 .catalog-items .price-sale { 
   background-color: rgb(255, 118, 118);
   font-weight: bold;
@@ -267,7 +266,7 @@ main h2 {
 }
 
 .button-container {
-  text-align: center; /* Center the button horizontally */
+  text-align: center; 
   margin: 1em 0;
 }
 
@@ -291,8 +290,6 @@ main h2 {
   color: #fff;
   background-color: #646464;
   height: 48px;
-  
-
 }
 
 .unlock-all-button:hover {
@@ -405,13 +402,13 @@ main h2 {
 
 .social-posts {
   width: 100%;
-  max-width: 400px; /* Set a maximum width for the tweets */
-  margin: 0 auto; /* Center the tweets */
+  max-width: 400px; 
+  margin: 0 auto;
 }
 
 .post {
-  background-color: #f5f8fa; /* Twitter-like background color */
-  border: 1px solid #e1e8ed; /* Border color */
+  background-color: #f5f8fa; 
+  border: 1px solid #e1e8ed; 
   border-radius: 10px;
   padding: 15px;
   margin-bottom: 20px;
@@ -505,6 +502,9 @@ footer ul li {
 .email-contact input[type="email"] {
   margin: 0;
   font-size: 1em;
+  border-radius: .5em;
+  border: 1px solid grey;
+  padding: .2em .4em;
 }
 
 .email-contact input[type="submit"] {
