--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -333,6 +333,47 @@ main h2 {
     url(../media/relationships.jpg);
 }
 
+.catalog-guides div:nth-child(5) {
+  background: linear-gradient(
+      180deg,
+      rgba(2, 0, 36, 0) 0%,
+      rgba(246, 246, 246, 0) 45%,
+      rgba(246, 246, 246, 1) 90%
+    ),
+    url(../media/1.jpg);
+}
+
+.catalog-guides div:nth-child(6) {
+  background: linear-gradient(
+      180deg,
+      rgba(2, 0, 36, 0) 0%,
+      rgba(246, 246, 246, 0) 45%,
+      rgba(246, 246, 246, 1) 90%
+    ),
+    url(../media/2.jpg);
+}
+
+.catalog-guides div:nth-child(7) {
+  background: linear-gradient(
+      180deg,
+      rgba(2, 0, 36, 0) 0%,
+      rgba(246, 246, 246, 0) 45%,
+      rgba(246, 246, 246, 1) 90%
+    ),
+    url(../media/3.jpg);
+}
+
+.catalog-guides div:nth-child(8) {
+  background: linear-gradient(
+      180deg,
+      rgba(2, 0, 36, 0) 0%,
+      rgba(246, 246, 246, 0) 45%,
+      rgba(246, 246, 246, 1) 90%
+    ),
+    url(../media/4.jpg);
+}
+
+
 .catalog-items {
   position: relative;
 }
