Small changes, typos and comments

--- a/ProyectoDOR/styles/layout-responsive.css
+++ b/ProyectoDOR/styles/layout-responsive.css
@@ -169,10 +169,12 @@
 
   .carousel-container{
     height: 80vh;
+    width: 100%;
   }
 
   .carousel-item img {
     object-fit: cover;
+    width: 100%;
   }
 
   .latest-posts {
