--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -468,7 +468,6 @@ main h2 {
 .carousel-item img {
   width: 100%;
   height: auto;
-  max-height: 100%;
   object-fit: contain;
 }
 
@@ -486,9 +485,11 @@ main h2 {
 .carousel-control {
   background: transparent;
   border: none;
-  font-size: 2rem;
+  font-size: 3rem;
   color: white;
   cursor: pointer;
+  margin: 0 1em 0 1em;
+  
 }
 
 .carousel-dot {
