--- a/ProyectoDOR/styles/layout.css
+++ b/ProyectoDOR/styles/layout.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Inter);
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Inter, sans-serif;
+  font-family: 'Nunito', sans-serif;
+
 }
 
 body {
