--- a/ProyectoDOR/styles/layout-responsive.css
+++ b/ProyectoDOR/styles/layout-responsive.css
@@ -8,7 +8,8 @@
     border-radius: 0;
     box-shadow: 0 0 0 0;
     z-index: auto;
-    border-right: 1px solid lightgray;
+    border-right: 1px solid #C8E8E8;
+;
   }
 
   .upgrade-button {
