--- a/ProyectoDOR/styles/light mode/product.css
+++ b/ProyectoDOR/styles/light mode/product.css
@@ -17,7 +17,7 @@ main {
   width: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
 }
 .product-image-library{
@@ -35,10 +35,11 @@ main {
 }
 
 .product-info{
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 2em;
+  margin-left: 3em;
   padding: 0 2em 0 2em;
 
 }
