--- a/ProyectoDOR/styles/light mode/layout.css
+++ b/ProyectoDOR/styles/light mode/layout.css
@@ -15,7 +15,7 @@ body {
 
 .aside {
   background: rgb(200,232,232);
-  background: linear-gradient(149deg, rgba(200,232,232,1) 19%, rgba(220,240,240,0.28895308123249297) 33%, rgba(241,249,249,0) 100%);
+  background: linear-gradient(149deg, rgba(200,232,232,1) 19%, rgba(241,249,249,1) 33%, rgba(241,249,249,1) 100%);
   border-radius: 0px 0px 150px 150px / 0px 0px 45px 45px;
   display: flex;
   flex-direction: column;
@@ -604,7 +604,7 @@ footer {
   text-align: center;
   padding: 20px;
   display: block;
-  display: block;
+  margin-top: 3em;
 }
 
 footer a {
