--- a/ProyectoDOR/styles/light mode/checkout.css
+++ b/ProyectoDOR/styles/light mode/checkout.css
@@ -1,26 +1,117 @@
-.checkout-container {
+main {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  justify-content: center;
+  padding: 0;
+}
+
+.checkout-container {
+  margin-top: 1em;
+  display: grid;
+  grid-template-columns: 1.4fr 0.6fr;
+  grid-template-rows: repeat(4, auto);
+  grid-column-gap: 25px;
+  grid-row-gap: 10px;
+  width: 80%;
+
+}
+
+#progress-bar {
+  display: table;
+  width: 100%;
+  margin: 0;
+  padding: 15px 15px 0;
+  table-layout: fixed;
+  width: 100%;
+  counter-reset: step;
+}
+#progress-bar li {
+  list-style-type: none;
+  display: table-cell;
+  width: 30%;
+  float: left;
+  font-size: 16px;
+  position: relative;
+  text-align: center;
+}
+#progress-bar li:before {
+  width: 50px;
+  height: 50px;
+  color: #212121;
+  content: counter(step);
+  counter-increment: step;
+  line-height: 50px;
+  font-size: 18px;
+  border: 1px solid #efefef;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  border-radius: 50%;
+  background-color: #fff;
+}
+#progress-bar li:after {
+  width: 100%;
+  height: 10px;
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  top: 25px;
+  left: -50%;
+  z-index: -1;
+}
+#progress-bar li:first-child:after {
+  content: none;
+}
+#progress-bar li.step-done {
+  color: #006E90;
+}
+#progress-bar li.step-done:before {
+  border-color: #006E90;
+  background-color: #006E90;
+  color: #fff;
+  content: "\f00c";
+  font-family: "FontAwesome";
+}
+#progress-bar li.step-done + li:after {
+  background-color: #006E90;
+}
+#progress-bar li.step-active {
+  color: #006E90;
+}
+#progress-bar li.step-active:before {
+  border-color: #006E90;
+  color: #006E90;
+  font-weight: 700;
+}
+
+.checkout-container h1 {
+  grid-area: 2 / 1 / 3 / 3;
 }
 
 .checkout-steps {
+  grid-area: 1 / 1 / 2 / 3;
   display: flex;
-  justify-content: space-between;
-  width: 80%;
-  margin-bottom: 20px;
+  align-items: center;
+  margin: 0;
+  min-height: 0px;
+  min-width: 0px;
 }
 
 .checkout-step {
   flex: 1;
+  cursor: pointer;
+  box-sizing: border-box;
+  float: none;
+  width: auto;
+  text-transform: uppercase;
   text-align: center;
-  padding: 10px;
-  background-color: #eee;
+  padding: 16px;
+  background: #fff;
+  border-bottom: 3px solid;
 }
 
 .checkout-form {
-  width: 40%;
+  grid-area: 3 / 1 / 4 / 2;
   border: 1px solid #ccc;
   padding: 20px;
   box-sizing: border-box;
@@ -35,7 +126,7 @@
 }
 
 .summary-container {
-  width: 20%;
+  grid-area: 3 / 2 / 4 / 3;
   background-color: #f2f2f2;
   padding: 20px;
   box-sizing: border-box;
@@ -48,4 +139,34 @@
 
 .product-summary li {
   margin: 5px 0;
+}
+
+.checkout-container a {
+  grid-area: 4 / 1 / 5 / 3;
+  width: 100%;
+  text-align: center;
+  padding-top: 2em;
+  cursor: pointer;
+}
+
+.checkout-container a div {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  min-width: 160px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: 17px 48px;
+  color: #fff;
+  background-color: #006E90;
+  height: 48px;
 }
