--- a/ProyectoDOR/styles/light mode/checkout.css
+++ b/ProyectoDOR/styles/light mode/checkout.css
@@ -5,6 +5,35 @@ main {
   padding: 0;
 }
 
+.back-to-cart {
+  position: absolute;
+  left: 2vw;
+  top: 15vh;
+  display: inline-block;
+  padding: 1rem 1.5rem;
+  color: #fff;
+  background-color: #c8e8e8;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+.back-to-cart:hover {
+  background-color: #a2cccc;
+}
+
+
+.back-to-cart p {
+  color: black;
+  margin-left: 1rem;
+  display: inline-block;
+
+}
+
+.fa-arrow-left{
+  display: inline-block;
+  color: black;
+}
 .checkout-container {
   margin-top: 1em;
   display: grid;
@@ -55,7 +84,7 @@ main {
   content: '';
   position: absolute;
   background-color: #fff;
-  top: 25px;
+  top: 21px;
   left: -50%;
   z-index: -1;
 }
@@ -112,7 +141,6 @@ main {
 
 .checkout-form {
   grid-area: 3 / 1 / 4 / 2;
-  border: 1px solid #ccc;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -125,11 +153,18 @@ main {
   margin: 5px 0;
 }
 
+.cart-summary {
+  padding: 1.5em;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 2em;
+  gap: 1em;
+}
+
 .summary-container {
   grid-area: 3 / 2 / 4 / 3;
-  background-color: #f2f2f2;
-  padding: 20px;
-  box-sizing: border-box;
 }
 
 .product-summary {
@@ -142,7 +177,7 @@ main {
 }
 
 .checkout-container a {
-  grid-area: 4 / 1 / 5 / 3;
+  grid-area: 4 / 2 / 5 / 3;
   width: 100%;
   text-align: center;
   padding-top: 2em;
@@ -169,4 +204,96 @@ main {
   color: #fff;
   background-color: #006E90;
   height: 48px;
+}
+
+.cart-summary table {
+  width: 95%;
+}
+
+
+.cart-summary td {
+  margin-top: 6em;
+  padding: .4em;
+  border-bottom: 2px solid #004257;
+
+}
+
+.cart-summary td:nth-child(even) {
+  text-align: right;
+}
+
+.cart-summary p {
+  margin: 0;
+  padding: 0;
+  color: #006e90;
+  font-weight: bolder;
+  font-size: 1.6em;
+}
+
+.next-step {
+  background-color: #004257;
+  color: #fff;
+  padding: 1em;
+  font-size: 1.2em;
+  border: none;
+  margin-top: .6em;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.checkout-form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.payment-methods {
+  width: 100%;
+  padding: 2em;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 1.5em;
+}
+
+.payment-methods i {
+  font-size: 3em;
+  color: #004257;
+}
+
+input[type="radio"] {
+  margin-top: -25px;
+  margin-right: 1em;
+  vertical-align: middle;
+  accent-color: #004257;
+}
+.credit-card-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.credit-card-form label {
+  margin-top: 1em;
+}
+
+.credit-card-form input {
+  margin-top: 1em;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.finish-payment-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 1em;
+  border: none;
+  border-radius: .3em;
+  cursor: pointer;
+    margin-top: 1em;
+    font-size: 1.2em;
+}
+
+.finish-payment-button:hover {
+  background-color: #45a049;
 }
