--- a/ProyectoDOR/styles/light_mode/cart.css
+++ b/ProyectoDOR/styles/light_mode/cart.css
@@ -77,6 +77,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .cart-summary table {
   width: 95%;
+  border-spacing: 0; 
+  border-collapse: collapse;
 }
 
 
@@ -108,6 +110,7 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 5px;
   cursor: pointer;
   transition: all .2s ease-in-out;
+  text-decoration: none;
 }
 
 .checkout-button:hover {
