--- a/ProyectoDOR/styles/light_mode/about.css
+++ b/ProyectoDOR/styles/light_mode/about.css
@@ -1,28 +1,3 @@
-body {
-  font-family: 'Arial', sans-serif;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-main {
-  padding: 20px;
-}
 
 section {
   margin-bottom: 30px;
@@ -45,7 +20,43 @@ th, td {
   text-align: left;
 }
 
-iframe {
-  width: 100%;
-  height: 315px;
+section h2 {
+  align-self: flex-start;
+  margin: 1em;
+  font-size: 1.8em;
 }
+
+#historia {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#actividad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.card-image {
+  flex: 1;
+  margin: 10px; 
+  max-width: 30%; 
+  height: 20vh;
+  width: 30vw;
+  object-fit: cover; 
+}
+
+#actividad img{
+  width: 100%;
+  height: auto;
+}
+
+#about-background {
+  position: absolute;
+  right: 0;
+  opacity: 0.1;
+}
+
